fix message and user routes
fix create, update and delete operations on messages, swagger update and delete operation on users
